# mureq

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mureq.py  setup.cfg
packaging/: setup.cfg
packaging/src/mureq/: __init__.py
tests/: test_integration.py  test_unit.py
