[metadata]
name = mureq
version = 0.2.0
author = Shivaram Lingamneni
author_email = slingamn@cs.stanford.edu
description = Single-file alternative to python-requests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slingamn/mureq
project_urls =
    Bug Tracker = https://github.com/slingamn/mureq/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
